STYLE: Fixed Text placement and readabilty

--- a/styles.css
+++ b/styles.css
@@ -38,6 +38,7 @@ ul {
 }
 
 h2 {
+    margin-top: 1.5rem;
     font-family: Rock Salt;
     font-size: 3rem;
 }
